Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20626

"Close All" cannot be triggered from Locator

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 4.8.0-beta1
    • Qt Creator 4.6.2, Qt Creator 4.7.0-beta2
    • All Other Issues
    • None
    • Ubuntu 17.04 64 bit

    Description

      1. Open a file.
      2. Type "t all" into the Locator.
        The Locator will find actions "Save All" and "Reparse Externally Changed Files". "Close All" is not being found although it is enabled in the menu.

      All actions in the menu should be available from the Locator.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-20626
          # Subject Branch Project Status CR V

          Activity

            People

              con Eike Ziller
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes