Show the right actions in the menu item locator filter

Instead of showing the actions that are available while locator has
focus, we need to show the actions that were enabled just before.

Task-number: QTCREATORBUG-20626
Change-Id: I16c8370074080f0d395922e0df77ce2aceee7088
Reviewed-by: David Schulz <david.schulz@qt.io>