src/plugins/coreplugin/locator/locatormanager.h
@@ -44,6 +44,8 @@ public:
     static void show(const QString &text, int selectionStart = -1, int selectionLength = 0);
 
     static QWidget *createLocatorInputWidget(QWidget *window);
+
+    static bool locatorHasFocus();
 };
 
 } // namespace Core
